Change file structure.

--- a/example/makefile
+++ b/example/makefile
@@ -2,6 +2,7 @@ TARGET := a.out
 SRCS := $(shell ls *.cu)
 OBJS := $(SRCS:.cu=.o)
 DEPS := $(SRCS:.cu=.d)
+NVCCFLAGS := -I../
 
 .PHONY: all
 all: $(TARGET)
@@ -10,10 +11,10 @@ $(TARGET): $(OBJS)
 	nvcc $^ -o $@ 
 
 %.o: %.cu
-	nvcc $< -c -o $@ -I./
+	nvcc $< -c -o $@ $(NVCCFLAGS)
 
 %.d: %.cu
-	nvcc -MM $< -I./ > $@
+	nvcc -MM $< $(NVCCFLAGS) > $@
 
 .PHONY: clean
 clean:
